crates/mdtype-reporter-human/src/snapshots/mdtype_reporter_human__tests__clean_run_summary.snap
---
source: crates/mdtype-reporter-human/src/lib.rs
expression: "String::from_utf8(buf).expect(\"utf-8\")"
---
mdtype: clean (7 files scanned)
